used recommended methods and removed copy constructor